--- a/gcc-product/src/index.html
+++ b/gcc-product/src/index.html
@@ -9,8 +9,10 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://cdn.usebootstrap.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" >
 </head>
 <body class="mat-typography">
   <app-root></app-root>
+  <script src="https://cdn.usebootstrap.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </body>
 </html>
